<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hivewiz</string>
    <string name="action_settings">App settings&#8230;</string>
    <string name="action_about">About&#8230;</string>
    <string name="action_wifi_settings">WiFi settings&#8230;</string>
    <string name="action_motor_settings">Motor settings&#8230;</string>
    
	<string name="about_dialog_title">About Hivewiz</string>
	<string name="version_label">App Version:</string>
    <string name="app_version">1.14</string>

    <string name="settings">Settings&#8230;</string>
    
    <string name="active_hive">Active Hivewiz</string>
    <string name="active_hive_desc_hint">Hivewiz to monitor?</string>
    <string name="active_hive_hint">\?\?\?</string>
   	<string name="active_hive_choice">Choose one Hivewiz</string>
    
    <string name="paired_hives">Hivewiz Pairing</string>
    <string name="paired_hives_desc_hint">Manage Hivewiz pairings</string>
    <string name="hive_id_hint">some sort of hint</string>
    <string name="hive_id_dialog">not sure what this is!?!?</string>
    
    <string name="no_bluetooth">There is no Bluetooth interface available.</string>
    <string name="choose_hive">Choose the Hive to pair with</string>
    
    <string name="enable_bluetooth">Bluetooth must be turned on to use the ble2cld bridge.  Click OK to enable.</string>
    <string name="enable_bridge_label">Enable ble2cld bridge</string>
    <string name="enable_bridge_desc_hint">Turn on/off</string>
    
    <string name="ble_settings">Bluetooth Settings&#8230;</string>
    
    <string name="factory_reset_label">Factory Reset</string>
    <string name="factory_reset_desc_hint">Reset ALL app settings</string>
    <string name="factory_reset_question">Are you certain you wish to reset ALL settings?</string>
    
    <string name="wifi_reset_label">Reset WiFi settings</string>
    <string name="wifi_reset_desc_hint">Reset all WiFi settings</string>
    <string name="wifi_reset_question">Are you certain you wish to reset the WiFi settings?</string>
    
    <string name="motor_reset_label">Reset Motor settings</string>
    <string name="motor_reset_desc_hint">Reset all Motor settings</string>
    <string name="motor_reset_question">Are you certain you wish to reset the Motor settings?</string>
    
    <string name="acra_test_label">ACRA Test</string>
    <string name="acra_test_desc_hint">Submit an ACRA bug</string>
    <string name="acra_test_question">Are you certain you wish to submit?</string>
    
    <string name="cpuTempLabel">MCU Temperature (&#8451;)</string>
	<string name="cpuTempDesc">on-chip temp</string>
	<string name="testTemp">134.6</string>
	
    <string name="hiveUptimeLabel">Hive Uptime</string>
	<string name="hiveUptimeDesc">Time since last reset</string>
	<string name="embedded_version_label">Firmware Id:</string>
	
	<string name="uptime_dialog_title">Active Hive Uptime</string>
	<string name="upsince_label">Last Boot:</string>
	<string name="current_status_label">Current Stat:</string>
	
	<string name="audioSampleLabel">Audio Sample</string>
	<string name="audio_dialog_title">Audio Sample</string>
	<string name="audioSampleRecordDesc">Record 20s Sample:</string>
	<string name="workingOnRecording">Working (will take approx 90s)&#8230;</string>
	<string name="audioSamplePlayDesc">Most recent:</string>
	<string name="record_label">Record</string>
	<string name="play_label">Play</string>
	<string name="pause_label">Pause</string>
			
	<string name="tempLabel">Temperature (&#8451;)</string>
	<string name="tempDesc">Hive temp</string>
	
    <string name="humidLabel">Humidity (RH%)</string>
	<string name="humidDesc">Hive humidity</string>
	<string name="testHumid">34.6</string>
			
	<string name="motor0Label">Motor 1 (Limited)</string>
	<string name="motor1UnlimitedLabel">Motor 2</string>
	<string name="motor2UnlimitedLabel">Motor 3</string>
	<string name="motor1LimitedLabel">Motor 2 (Limited)</string>
	<string name="motor2LimitedLabel">Motor 3 (Limited)</string>
	<string name="motorDesc">Motor distance</string>
	<string name="testMotor">1234</string>
	
	<string name="beecntLabel">Bee Count</string>
	<string name="beecntDesc">Bees in the hive</string>
	
	<string name="latch_label">Latch</string>
	<string name="latch_desc_hint">access and cooling latch</string>
	
	<string name="warning">Warning:</string>
    <string name="error">Error:</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    
    <string name="empty"></string>
	<string name="timestamp">12-Dec-16 23:55</string>
	<string name="test">foo</string>
	
	<string name="clear_all">Unpair All</string>
	<string name="delete_warning">All pairings will be removed and you will have to rescan.</string>
	<string name="findOthers">Find Others&#8230;</string>
	<string name="choose_name">Choose a name&#8230;</string>

	<string name="threads_per_meter_dialog_title">Threads per Meter</string>
	<string name="threads_per_meter_label">Thread Count</string>
	<string name="threads_per_meter_desc_hint">Threads per meter</string>
	
	<string name="steps_per_rev_dialog_title">Steps per Revolution</string>
	<string name="steps_per_rev_label">Motor steps per rev</string>
	<string name="steps_per_rev_desc_hint">Steps per rev</string>
	
	<string name="steps_per_second_dialog_title">Steps per Second</string>
	<string name="steps_per_second_label">Motor steps per second</string>
	<string name="steps_per_second_desc_hint">Steps per second</string>
	
	<string name="prescale_dialog_title">Clock Prescale</string>
	<string name="prescale_label">Clock Prescale</string>
	<string name="prescale_hint">sets step rate</string>
	
	<string name="ap_label">WiFi Access Point</string>
    <string name="ap_desc_hint">SSID and Password</string>
    <string name="ap_title">WiFi Access Point&#8230;</string>
	
    <string name="ssid_label">SSID</string>
    <string name="pswd_label">Password</string>
    
	<string name="db_credentials_label">DB Settings</string>
    <string name="db_credentials_desc_hint">Db credentials</string>
    <string name="db_credentials_title">DB Settings&#8230;</string>
	
    <string name="sample_rate_label">Sensor Rate (minutes)</string>
    <string name="sample_rate_desc_hint">Minutes between samples</string>
    <string name="sample_rate_dialog_title">Sensor Sample Rate&#8230;</string>
	
    <string name="cmd_queue_title">Hivewiz Pending Cmds</string>
    <string name="flush_cmd_queue_msg">Clear Hive cmds</string>
    <string name="flush_cmd_queue_label">Pending cmds</string>
    <string name="flush_cmd_queue_desc_hint">View/Clear pending cmds</string>
    <string name="clear">Clear</string>
    
    <string name="servo_config_label">Latch Servo</string>
    <string name="servo_config_dialog_title">Servo Config</string>
    <string name="servo_config_desc_hint">configure the servo</string>
    <string name="trip_temp_label">Trip temperature (&#8451;)</string>
    <string name="dir_label">Direction when exceeded</string>
    <string name="tick_lower_label">Servo min ticks</string>
    <string name="tick_upper_label">Servo max ticks</string>
    
    <string name="celcius">&#8451;</string>
    
    <string name="db_host_label">Db Host:</string>
    <string name="db_host_uses_ssl_label">Use SSL:</string>
    <string name="db_key_label">Writable key:</string>
    <string name="db_pswd_label">Key\'s Password:</string>

    <string name="db_inaccessible">The DB is not currently accessible; are you online and are the db credentials correct?</string>
    <string name="db_inaccessible_ignore_txt">Prevent these alert for 5 minutes?</string>
    
	<string name="crash_toast_text">Ooooops!  Hivewiz&#8482; has crashed, but a report has been sent to the developers so they can fix the issue!</string>
	
	<string name="red">R</string>
    <string name="minus">-</string>
	<string name="minusminus">&#60;&#60;</string>
	<string name="minuslimit">&#124;&#60;</string>
	<string name="plusplus">&#62;&#62;</string>
	<string name="pluslimit">&#62;&#124;</string>
	<string name="plus">+</string>
    <string name="hex">0x</string>
    <string name="zero">0</string>
    		
</resources>
