<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="vertical" >

	<TextView
	    android:layout_width="match_parent"
	    android:layout_height="1dip"
	    android:text="@string/empty"
	    android:textAppearance="?android:attr/textAppearanceSmall" />

    <View
	    android:layout_width="fill_parent"
	    android:layout_height="2dip"
	    android:background="#888888" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/minusMinus"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minusminus" />

        <Button
            android:id="@+id/minus"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minus" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/empty"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/textValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/zero"
			android:minEms="4"
			android:gravity="right"
            android:background="#C9EAEA"
            android:inputType="number"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/empty"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Button
            android:id="@+id/plus"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plus" />

        <Button
            android:id="@+id/plusPlus"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plusplus" />

    </LinearLayout>
    
</LinearLayout>
