<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="vertical" >

   	<TextView
	    android:layout_width="match_parent"
	    android:layout_height="1dip"
	    android:text="@string/empty"
	    android:textAppearance="?android:attr/textAppearanceSmall" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
		android:layout_marginStart="5dp"
		android:layout_marginEnd="5dp"
		android:layout_marginTop="5dp"
        android:orientation="horizontal" >
        
   		<TextView
   		    android:layout_width="wrap_content"
   		    android:layout_height="wrap_content"
   		    android:text="@string/audioSampleRecordDesc"
		    android:layout_weight="10"
   		    android:textAppearance="?android:attr/textAppearanceMedium"
   		    android:textStyle="bold" />
	
   		<ImageView
		    android:id="@+id/record_button"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_weight="2"
		    android:contentDescription="@string/record_label"
		    android:src="@drawable/record" />
		
	</LinearLayout>
    	
    <View
	    android:layout_width="fill_parent"
	    android:layout_height="2dip"
        android:background="#C9EAEA" />

   	<TextView
   		android:layout_width="wrap_content"
   		android:layout_height="wrap_content"
		android:layout_marginStart="5dp"
		android:layout_marginEnd="5dp"
		android:layout_marginTop="5dp"
   		android:text="@string/audioSamplePlayDesc"
		android:layout_weight="10"
   		android:textAppearance="?android:attr/textAppearanceMedium"
   		android:textStyle="bold" />
	
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
		android:layout_marginStart="5dp"
		android:layout_marginEnd="5dp"
		android:layout_marginTop="5dp"
        android:orientation="horizontal" >
        
	   	<TextView
		    android:id="@+id/recordingTimestamp"
	   		android:layout_width="wrap_content"
	   		android:layout_height="wrap_content"
	   		android:text="@string/empty"
			android:layout_weight="10"
	   		android:textAppearance="?android:attr/textAppearanceMedium"
	   		android:textStyle="bold" />
	
	   	<TextView
	   		android:layout_width="wrap_content"
	   		android:layout_height="wrap_content"
	   		android:text="@string/empty"
			android:layout_weight="10"
	   		android:textAppearance="?android:attr/textAppearanceMedium"
	   		android:textStyle="bold" />
	
	   	<ImageView
		    android:id="@+id/play_button"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_weight="2"
		    android:contentDescription="@string/play_label"
		    android:src="@drawable/ic_play" />
		
   		<ImageView
		    android:id="@+id/share_button"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_weight="2"
		    android:contentDescription="@string/pause_label"
		    android:src="@drawable/ic_action_share" />
		
	</LinearLayout>
	
    <View
	    android:layout_width="fill_parent"
	    android:layout_height="2dip"
        android:background="#C9EAEA" />
	    
</LinearLayout>
