<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="vertical" >

	<TextView
	    android:layout_width="match_parent"
	    android:layout_height="1dip"
	    android:text="@string/empty"
	    android:textAppearance="?android:attr/textAppearanceSmall" />

	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
		android:layout_marginStart="5dp"
		android:layout_marginEnd="5dp"
		android:layout_marginTop="5dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/version_label"
            android:textAppearance="?android:attr/textAppearanceSmall" />

		<View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />                
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_version"
            android:gravity="end"
            android:background="#C9EAEA"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </LinearLayout>
    
</LinearLayout>
